fixed a strange white space on the right of the screen in mobile

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -20,6 +20,11 @@
         padding: 25px 0; 
     }
     
+    .col {
+        display: block;
+        float:left;
+    }    
+    
     /* Header */
     .name { 
         padding: 0;
